--- a/app/index.css
+++ b/app/index.css
@@ -1,8 +1,35 @@
 body {
-  background: yellowgreen;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#c9de96+0,8ab66b+81,398235+100 */
+  background: #c9de96; /* Old browsers */
+  background: -moz-linear-gradient(top, #c9de96 0%, #8ab66b 81%, #398235 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #c9de96 0%,#8ab66b 81%,#398235 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #c9de96 0%,#8ab66b 81%,#398235 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c9de96', endColorstr='#398235',GradientType=0 ); /* IE6-9 */
   color: #333;
   font-family: -apple-system, BlickMacSystemFont, Segoe UI, Robot, Oxygen-Sans,
       Ubuntu, Cantarell, Helvetica Neue, sans-serif;
+}
+
+.nav {
+  display: flex;
+  padding: 20px;
+  font-size: 20px;
+  background-color: #fff;
+}
+
+.nav-item {
+  margin-left: 0;
+  margin-right: 15px;
+  list-style-type: none;
+}
+
+.navlink {
+  text-decoration: none;
+  color: #b4d455;
+}
+
+.navlink--active {
+  font-weight: bold;
 }
 
 .container {
@@ -10,7 +37,44 @@ body {
   margin: 0 auto;
 }
 
-.languages{
+.container--center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.row {
+  display: flex;
+  justify-content: space-around;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  max-width: 500px;
+  align-items: center;
+}
+
+.form--battle {
+  margin: 20px;
+}
+
+input {
+  border-radius: 3px;
+  margin: 10px 0;
+  padding: 5px;
+  border: 1px solid rgba(0, 0, 0, .43);
+  font-size: 16px;
+  width: 80%;
+}
+
+.label--battle {
+  font-size: 30px;
+  font-weight: 200;
+}
+
+.languages {
   display: flex;
   justify-content: center;
   padding: 0;
@@ -55,4 +119,30 @@ body {
 .popular-rank {
   margin: 10px;
   font-size: 20px;
+}
+
+.button,
+.link--button {
+  color: #e6e6e6;
+  background: #0a0a0a;
+  border: none;
+  font-size: 16px;
+  border-radius: 3px;
+  width: 200px;
+  text-align: center;
+  display: block;
+  padding: 7px 0;
+  margin: 10px auto;
+}
+
+.button:hover:enabled,
+.link--button:hover:enabled {
+  background: linear-gradient(#1a1a1a, #0a0a0a);
+  color: #fff;
+  text-decoration: none;
+}
+
+.button:active,
+.link--button:active {
+  transform: translateY(1px);
 }
